[gd_scene load_steps=13 format=3 uid="uid://cl7cyofrusswf"]

[ext_resource type="Script" uid="uid://4ex3ffg63dk4" path="res://UI/Shop/shop_ui.gd" id="1_ms080"]
[ext_resource type="Theme" uid="uid://5uii13lyhonh" path="res://Theme/Menu.tres" id="1_ut1vs"]
[ext_resource type="Script" uid="uid://88hsnkwkom7x" path="res://Classes/CardClass.gd" id="2_h84ll"]
[ext_resource type="Texture2D" uid="uid://6btenu0m3b47" path="res://GABE1.png" id="2_knsrc"]
[ext_resource type="Resource" uid="uid://mbl6rpbvv83c" path="res://Cards/Bomb.tres" id="4_vxfwk"]
[ext_resource type="Resource" uid="uid://dxtxxly6vbto3" path="res://Cards/FaithlessLooting.tres" id="5_e6pne"]
[ext_resource type="Resource" uid="uid://c0b3rwaho0s1r" path="res://Cards/GlassDagger.tres" id="5_ut1vs"]
[ext_resource type="Resource" uid="uid://dya6axv6ovy6i" path="res://Cards/Snowball.tres" id="6_4w3dd"]
[ext_resource type="Resource" uid="uid://cfwbtegsgysth" path="res://Cards/Kneecap.tres" id="7_ywfqb"]
[ext_resource type="Resource" uid="uid://87kgyaemmdqe" path="res://Cards/StabCard.tres" id="9_hrdqk"]
[ext_resource type="Resource" uid="uid://cbo21pu0adocn" path="res://Cards/Zap.tres" id="10_0h5cs"]
[ext_resource type="PackedScene" uid="uid://cthnoyb4c4aum" path="res://UI/Deck Display.tscn" id="11_h84ll"]

[node name="ShopUi" type="Control" node_paths=PackedStringArray("buy_button", "gabe_words_text")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ut1vs")
script = ExtResource("1_ms080")
shop_deck = Array[ExtResource("2_h84ll")]([ExtResource("4_vxfwk"), ExtResource("5_e6pne"), ExtResource("5_ut1vs"), ExtResource("7_ywfqb"), ExtResource("6_4w3dd"), ExtResource("9_hrdqk"), ExtResource("10_0h5cs")])
buy_button = NodePath("VBoxContainer/Buy")
gabe_words_text = NodePath("VBoxContainer2/PanelContainer/RichTextLabel")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.485703, 0.485704, 0.485703, 1)

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0888889
anchor_right = 0.3125
anchor_bottom = 1.0
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer2/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50

[node name="Gabe" type="TextureRect" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_knsrc")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.344271
anchor_top = 0.156481
anchor_right = 0.941667
anchor_bottom = 0.492593
offset_right = 1147.0
offset_bottom = 363.0
scale = Vector2(0.5, 0.5)
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.545313
anchor_top = 0.693519
anchor_right = 0.713021
anchor_bottom = 0.817593
metadata/_edit_use_anchors_ = true

[node name="Buy" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "Buy Card"

[node name="Deck Edit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Edit Deck"

[node name="Increase Deck Size" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.893519
anchor_right = 0.649479
anchor_bottom = 0.948148
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Leave"
metadata/_edit_use_anchors_ = true

[node name="DeckDisplay" parent="." instance=ExtResource("11_h84ll")]
visible = false
layout_mode = 1

[node name="Void" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Money Container" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -445.0
offset_bottom = 95.0
grow_horizontal = 0
mouse_filter = 1

[node name="Moners" type="Label" parent="Money Container"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 50
text = "Moners : 0"

[connection signal="pressed" from="VBoxContainer/Buy" to="." method="buy_selected"]
[connection signal="pressed" from="VBoxContainer/Deck Edit" to="." method="_on_deck_edit_pressed"]
[connection signal="pressed" from="VBoxContainer/Increase Deck Size" to="." method="increase_deck_size"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
